# ZML

./: .gitignore  package.json  pnpm-lock.yaml
apps/desktop/: electron.vite.config.ts  package.json
apps/game-bridge/: README.md  pyproject.toml  pyrightconfig.json
apps/game-bridge/src/zml_game_bridge/: app.py  main.py  settings.py
apps/game-bridge/src/zml_game_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/game-bridge/src/zml_game_bridge/api/: app.py  dto.py  sse_hub.py  ws_hub.py
apps/game-bridge/src/zml_game_bridge/app/: db_writer.py  db_writer_worker.py  event_channel.py  event_gateway.py  event_persister.py  processor.py  runtime.py
apps/game-bridge/src/zml_game_bridge/common/: models.py  types.py
apps/game-bridge/src/zml_game_bridge/events/: base.py  bus.py  bus_in_memory.py  contracts.py  envelope.py  in_memory_persisted_event_bus.py
apps/game-bridge/src/zml_game_bridge/services/: run_state.py
apps/game-bridge/src/zml_game_bridge/storage/: db_open.py  db_reader.py  db_schema.py  db_writer.py  event_reader.py  event_store.py  run_segment_store.py  run_store.py  sqlite.py
apps/game-bridge/src/zml_game_bridge/testing/: chat_log_gen.py  chat_writer.py
apps/game-bridge/tests/: pyrightconfig.json
apps/game-bridge/tests/app/: test_db_writer.py  test_event_gateway.py  test_event_persister.py
apps/game-bridge/tests/events/: test_bus_in_memory.py
apps/game-bridge/tests/inputs/chat/: test_chat_parser.py  test_interpreter.py  test_parser.py  test_runner.py  test_tailer.py
apps/game-bridge/tests/storage/: test_db_writer.py
(+89 files in other folders)
